app/assets/stylesheets/layout.scss
// Events pages
.page-header-subtitle {
  margin-bottom: 15px;

  img {
    margin-right: 5px;
    vertical-align: -25%;
  }

  h4 {
    display: inline-block;

    .small-bullet {
      font-size: 1.3em;
    }
  }
}

// Top Navbar
.app-header {
  @extend .navbar;

  height: 50px;
  padding: 0;
  margin: 0;

  #mobile-nav {
    color: white;
    max-width: 50px;
  }

  a.app-header__logo {
    border: 1px dotted $primary-color;
    position: absolute;
    top: 0;
    left: 0;
    padding: 0;
    max-width: 50px;
    background-color: $primary-color;
    display: block;
    height: 100%;
    vertical-align: middle;

    @extend .d-none, .d-md-block;

    img {
      display: block;
      margin: 5px auto;
      vertical-align: middle;
      max-height: 40px;
      max-width: 40px;
      background-color: white;
      padding: 0;
    }
  }

  #application-title {
    position: absolute;
    top: 0;
    left: 50px;
    line-height: 50px;
    text-align: center;
    vertical-align: middle;
    font-family: sans-serif;
    font-size: 1.2em;
    color: white;
  }
}

// Alerts
.flash-messages {
  @media (min-width: 768px) { margin-left: $sidebar-width; }

  position: relative;
  top: 50px;
  text-align: center;
  padding: 0;
}

.alert-alert,
.alert-notice {
  @extend .alert-success;

  text-align: center;
}

.notify-alert {
  box-shadow: none;
  border: 1px;
  max-width: 99999px;
  text-align: center;
  width: 100%;

  .alert {
    @media (min-width: 768px) { margin-left: -$sidebar-width; }
  }

  .alert-warning {
    margin-bottom: 0;
  }

  .alert-notice {
    @extend .alert-warning;
  }

  .alert-error {
    @extend .alert-danger;
  }
}

// Side Navbar
.app-sidebar__overlay {
  @media (max-width: 767px) {
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    z-index: 9;
  }
}

.app-sidebar {
  #hide-sidebar {
    margin-top: -15px;
    margin-bottom: 50px;
    text-align: right;
    width: 100%;

    a {
      font-size: 1.2em;
      color: white;
      margin-right: 8px;
      text-decoration: none;

      i.hidden {
        visibility: none;
      }
    }
  }

  ul.app-menu {
    margin-top: -50px;
  }
}

li.nav-second-level {
  margin-left: 5%;
}

// General
.card-title {
  font-size: 1.5em;
  font-weight: bold;
  color: white;
  padding: 10px;
  background-color: $primary-color;

  h3 {
    color: white;
  }
}

// Footer
.sidebar-mini {
  margin: 0;
  padding: 0;
}

.footer {
  display: block;
  float: top;
  position: absolute;
  left: -3%;
  width: 106%;
  text-align: center;
  margin: 0;

  @media (min-width: 768px) { text-indent: $sidebar-width; }

  padding: 0;

  .card-footer {
    font-size: 0.9em;
  }

  .powered-by {
    @extend .pull-right;

    margin-right: 2%;
    font-size: 0.8em;
  }
}

